SUBDIRS = common file_parse example

nobase_pkginclude_HEADERS = \
  common/arithmetic_utils.h \
  common/assignment.h \
  common/constraint_a_binary.h \
  common/constraint_a_eq.h \
  common/constraint_a_ge.h \
  common/constraint_a_gt.h \
  common/constraint_a.h \
  common/constraint_a_le.h \
  common/constraint_a_lt.h \
  common/constraint_a_ne.h \
  common/constraint.h \
  common/constraint_l_and.h \
  common/constraint_l_binary.h \
  common/constraint_l_cbool.h \
  common/constraint_l.h \
  common/constraint_l_iff.h \
  common/constraint_l_imply.h \
  common/constraint_l_ivld.h \
  common/constraint_l_not.h \
  common/constraint_l_or.h \
  common/constraint_l_param.h \
  common/constraint_l_term.h \
  common/constraint_l_unary.h \
  common/constraint_l_xor.h \
  common/constraint_s_binary.h \
  common/constraint_s_eq.h \
  common/constraint_s.h \
  common/constraints.h \
  common/constraint_s_ne.h \
  common/defs.h \
  common/eval_type_bool.h \
  common/eval_type_double.h \
  common/eval_type.h \
  common/eval_type_int.h \
  common/eval_type_string.h \
  common/exp_a_add.h \
  common/exp_a_binary.h \
  common/exp_a_cast.h \
  common/exp_a_cdouble.h \
  common/exp_a_cint.h \
  common/exp_a_constraintcast.h \
  common/exp_a_div.h \
  common/exp_a.h \
  common/exp_a_mod.h \
  common/exp_a_mult.h \
  common/exp_a_neg.h \
  common/exp_a_param.h \
  common/exp_a_sub.h \
  common/exp_a_term.h \
  common/exp_a_unary.h \
  common/exp.h \
  common/exp_s_cstring.h \
  common/exp_s.h \
  common/exps.h \
  common/exp_s_param.h \
  common/exp_s_term.h \
  common/paramspec_bool.h \
  common/paramspec_double.h \
  common/paramspec.h \
  common/paramspec_int.h \
  common/paramspecs.h \
  common/paramspec_string.h \
  common/pvpair.h \
  common/seed_constraint.h \
  common/seed.h \
  common/seed_tuple.h \
  common/strength.h \
  common/sutmodel.h \
  common/test_case.h \
  common/tree_node.h \
  common/tuple.h \
  common/tuplepool.h \
  common/utils.h \
  file_parse/assembler.h \
  file_parse/ct_lexer-configuration.hpp \
  file_parse/ct_lexer.hpp \
  file_parse/ct_lexer-token.hpp \
  file_parse/ct_lexer-token_ids.h \
  file_parse/ct_lexer-token_ids.hpp \
  file_parse/ct_parser.tab.hpp \
  file_parse/err_logger.h \
  file_parse/err_logger_cerr.h \
  file_parse/location.hh \
  file_parse/position.hh \
  file_parse/stack.hh

