lib_LIBRARIES = libct_common.a

AM_CXXFLAGS = -I ../..
libct_common_a_SOURCES = \
  arithmetic_utils.cpp \
  assignment.cpp \
  constraint_a_binary.cpp \
  constraint_a.cpp \
  constraint_a_eq.cpp \
  constraint_a_ge.cpp \
  constraint_a_gt.cpp \
  constraint_a_le.cpp \
  constraint_a_lt.cpp \
  constraint_a_ne.cpp \
  constraint.cpp \
  constraint_l_and.cpp \
  constraint_l_binary.cpp \
  constraint_l_cbool.cpp \
  constraint_l.cpp \
  constraint_l_iff.cpp \
  constraint_l_imply.cpp \
  constraint_l_ivld.cpp \
  constraint_l_not.cpp \
  constraint_l_or.cpp \
  constraint_l_param.cpp \
  constraint_l_term.cpp \
  constraint_l_unary.cpp \
  constraint_l_xor.cpp \
  constraint_s_binary.cpp \
  constraint_s.cpp \
  constraint_s_eq.cpp \
  constraint_s_ne.cpp \
  err_logger.cpp \
  eval_type_bool.cpp \
  eval_type.cpp \
  eval_type_double.cpp \
  eval_type_int.cpp \
  eval_type_string.cpp \
  exp_a_add.cpp \
  exp_a_binary.cpp \
  exp_a_cast.cpp \
  exp_a_cdouble.cpp \
  exp_a_cint.cpp \
  exp_a_constraintcast.cpp \
  exp_a.cpp \
  exp_a_div.cpp \
  exp_a_mod.cpp \
  exp_a_mult.cpp \
  exp_a_neg.cpp \
  exp_a_param.cpp \
  exp_a_sub.cpp \
  exp_a_term.cpp \
  exp_a_unary.cpp \
  exp.cpp \
  exp_s.cpp \
  exp_s_cstring.cpp \
  exp_s_param.cpp \
  exp_s_term.cpp \
  paramspec_bool.cpp \
  paramspec.cpp \
  paramspec_double.cpp \
  paramspec_int.cpp \
  paramspec_string.cpp \
  pvpair.cpp \
  seed_constraint.cpp \
  seed.cpp \
  seed_tuple.cpp \
  strength.cpp \
  test_case.cpp \
  tree_node.cpp \
  tuple.cpp \
  tuplepool.cpp

